--- a/client/src/components/main.module.css
+++ b/client/src/components/main.module.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   row-gap: 20px;
+  width: 100%;
 }
 
 .textarea {
@@ -24,4 +25,12 @@
   text-shadow: white 0 0 4px;
   color: black;
   font-weight: bold;
+  margin: 0 20px 20px;
+}
+
+@media only screen and (max-width: 440px) {
+  .textarea {
+    max-width: calc(100% - 40px);
+    width: calc(100% - 40px);
+  }
 }
